--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
     "@heroicons/react": "^1.0.6",
     "@livekit/components-react": "^2.4.3",
     "@livekit/components-styles": "^1.0.12",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "livekit-server-sdk": "^2.6.1",
     "lucide-react": "^0.438.0",
     "mongoose": "^8.6.2",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-table": "^7.8.0",
+    "recharts": "^2.12.7",
     "scrollreveal": "^4.0.9",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
